# opnsense-dyndns-hetzner

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: build.yaml
k8s/: config.yaml  deployment.yaml  kustomization.yaml  secret.yaml.example
src/opnsense_dyndns_hetzner/: __init__.py  config.py  health.py  hetzner.py  kubernetes_updater.py  main.py  opnsense.py  ratelimit.py  retry.py  verify.py
tests/: __init__.py  conftest.py  test_config.py  test_hetzner.py  test_opnsense.py  test_ratelimit.py  test_verify.py
